Fix valign

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -46,8 +46,11 @@ body {
 	margin-bottom: 1em;
 	float: none;
 	display: block;
-	vertical-align: top;
 	white-space: nowrap;
+	img {
+		vertical-align: top;
+
+	}
 	@media #{$small} {
 		@include grid(12,2);
 		@include prefix(12,0.5);
